Ajout des paramètres de la page à la commande de partage.